syntax = "proto3";

package pb;

option go_package = "order-service/pb";

service EmailService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {}
}

message SendEmailRequest {
  string to = 1;
  string playerId = 2;
  string productName = 3;
  int32 productPrice = 4;
}

message SendEmailResponse {
  string message = 1;
}
